@@ -1213,9 +1213,9 @@
       "silo": {
         "success": "All done! You increased the limit of your silo",
         "poor": "You don't have enough stars to increase your silo space",
-        "limit": "You can't upgrade your silo anymore! It is at maximum level",
         "title": "Upgrade your silo",
         "button": "Upgrade silo",
+        "max-level-description": "The silo is already on its max level.",
         "description": "Increase your silo limit by **{{increase}}** spaces for just **{{cost}}** :star:\nCurrently you have **{{limit}}** limit spaces."
       },
       "fields": {
