@@ -1218,8 +1218,8 @@
       "silo": {
         "success": "Tudo feito! Tu aumentou o limite do teu silo",
         "poor": "Tu não tem estrelinhas o suficiente para aumentar o espaço de seu silo",
-        "limit": "Tu não pode mais melhorar o seu silo! Ele está no nível máximo",
         "title": "Melhore seu silo",
+        "max-level-description": "O silo já está no nível máximo!",
         "button": "Melhorar silo",
         "description": "Aumente o limite de seu silo em **{{increase}}** espaços por apenas **{{cost}}** :star:\nAtualmente tu tem **{{limit}}** espaços de limite."
       },
