@@ -18,11 +18,15 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - A `/loja vender plantas` foi atualizada para os novos componentes V2 do Discord! Agora também é possível vender diferentes qualidades de plantas.
 - O `/fazendinha plantações` foi atualizado para os novos componentes V2 do Discord. Agora também é possível plantar e colher todos os campos ao mesmo tempo - Sugerido por @mareys.
 - O `/fazendinha silo` foi atualizado para os novos componentes V2 do Discord.
-- O `/fazendinha administrar campos` foi atualziado para os novos componentes V2 do Discord.
+- O `/fazendinha administrar campos` foi atualizado para os novos componentes V2 do Discord. Agora também é possível aumentar o silo por este comando.
 
 ## Fixed
 
 - Corrigido os itens mágicos ainda aparecerem na loja para serem comprados, mesmo já tendo eles - Reportado por @mareys.
+
+### Removed
+
+- Removido o comando `/fazendinha administrar silo`.
 
 ## [6.1.5] - 2025-12-17
 
